--- a/style.css
+++ b/style.css
@@ -2,10 +2,10 @@
 
 :root {
     --cor-fundo: #01080E;
-    --cor-principal: #0B0D20 ;
+    --cor-principal: #10010b ;
     --cor-secundaria: #212333;
-    --cor-destaque: #2BDEFD;
-    --cor-texto: #D7F9FF;
+    --cor-destaque: #fd2be4;
+    --cor-texto: #fed7ff;
 }
   
 body {
